--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pontus-node-jdbc",
   "version": "1.0.0",
   "description": "A TypeScript wrapper for JDBC connections to work with TypeScript applications",
-  "main": "dist/index.js", 
+  "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
@@ -22,12 +22,15 @@
   "author": "Leo Martins",
   "license": "MIT",
   "dependencies": {
+    "java": "^0.14.0",
     "lodash": "^4.17.21",
     "winston": "^3.3.3"
-    // Add other necessary dependencies
   },
   "devDependencies": {
-    "typescript": "^5.x",
-    "@types/node": "^18.x"
+    "@types/java": "^0.9.5",
+    "@types/lodash": "^4.17.7",
+    "@types/node": "^18.x",
+    "@types/uuid": "^10.0.0",
+    "typescript": "^5.x"
   }
 }
