--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "devDependencies": {
     "@types/java": "^0.9.5",
     "@types/lodash": "^4.17.7",
-    "@types/node": "^18.x",
+    "@types/node": "^18.19.63",
     "@types/uuid": "^10.0.0",
     "typescript": "^5.x"
   }
