--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,12 +14,12 @@ services:
       ADMIN_PASSWORD: admin
       USER_PASSWORD: user
       LD_LIBRARY_PATH: /usr/lib/jvm/java-1.17.0-openjdk-amd64/lib/server:/usr/lib/jvm/java-1.17.0-openjdk-amd64/lib
-      P_DELTA_TABLE_HIVE_SERVER: jdbc:hive2://delta-db:10000 
+      P_DELTA_TABLE_HIVE_SERVER: jdbc:hive2://pontus-node-jdbc-delta-db:10000 
     volumes:
       - .:/usr/src/app
       - /var/run/docker.sock:/var/run/docker.sock
-    # depends_on:
-    #   - delta-db 
+    depends_on:
+      - delta-db 
     networks:
       - app-network
     entrypoint:
@@ -29,9 +29,8 @@ services:
         cd pontus-node-jdbc
         npm install
         cd ..
-        export CLASSPATH="$(ls /usr/src/app/src/jars/*|xargs|sed -e 's/ /,/g' )"
+        export CLASSPATH="$(ls /usr/src/app/delta-table/node/jars/*|xargs|sed -e 's/ /,/g' )"
         cd ../..
-
         cd pontus-node-jdbc
         npm run build
         ./run-docker.sh 
@@ -40,21 +39,22 @@ services:
         sleep 1000000
         
 
-  # delta-db:
-  #   build:
-  #     context: ./delta-table/docker/
-  #     dockerfile: Dockerfile
-  #   container_name: db-setup
-  #   volumes:
-  #     - ./delta-table/run-delta-jupyterlab.sh:/usr/local/bin/db-init.sh
-  #     - ./delta-table/data:/data 
-  #     - ./delta-table/work-dir:/opt/spark/work-dir
-  #   networks:
-  #     - app-network
-  #   restart: "no"  # Ensures this runs once and exits
-  #   ports:
-  #     - "10000:10000"
-  #     - "8888:8888"
+  delta-db:
+    build:
+      context: ./delta-table/docker/
+      dockerfile: Dockerfile
+    container_name: node-pontus-jdbc-db-setup
+
+    volumes:
+      - ./delta-table/run-delta-jupyterlab.sh:/usr/local/bin/db-init.sh
+      - ./delta-table/data:/data 
+      - ./delta-table/work-dir:/opt/spark/work-dir
+    networks:
+      - app-network
+    restart: "no"  # Ensures this runs once and exits
+    ports:
+      - "11000:10000"
+      - "8888:8888"
         
 networks:
   app-network:
