--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -1,4 +1,4 @@
-name: Docker Workflow
+name: Docker Compose Workflow
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  build-and-run-docker:
+  test-with-docker-compose:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,10 +19,15 @@ jobs:
       - name: Set up Docker
         uses: docker/setup-buildx-action@v2
 
-      - name: Build Docker Image
+      - name: Build and Run Services with Docker Compose
         run: |
-          docker build -t my-docker-image .
+          docker-compose up -d --build
 
-      - name: Run Docker Container
+      - name: Run Tests
         run: |
-          docker run -d -p 8080:8080 --name my-container my-docker-image
+          docker-compose exec app npm run test src/__tests__/query.test.ts  # Example using pytest
+
+      - name: Tear Down
+        if: always()
+        run: |
+          docker-compose down
