installing docker-compose

--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -16,8 +16,11 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Set up Docker
-        uses: docker/setup-buildx-action@v2
+      - name: Install Docker Compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/v2.26.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+          docker-compose version
 
       - name: Build and Run Services with Docker Compose
         run: |
@@ -25,7 +28,7 @@ jobs:
 
       - name: Run Tests
         run: |
-          docker-compose exec app npm run test src/__tests__/query.test.ts  # Example using pytest
+          docker-compose exec app pytest  # Replace with your test command
 
       - name: Tear Down
         if: always()
