--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       ADMIN_PASSWORD: admin
       USER_PASSWORD: user
       LD_LIBRARY_PATH: /usr/lib/jvm/java-1.17.0-openjdk-amd64/lib/server:/usr/lib/jvm/java-1.17.0-openjdk-amd64/lib
-      P_DELTA_TABLE_HIVE_SERVER: jdbc:hive2://pontus-node-jdbc-delta-db:10000 
+      P_DELTA_TABLE_HIVE_SERVER: jdbc:hive2://node-pontus-jdbc-db-setup:10000 
     volumes:
       - .:/usr/src/app
       - /var/run/docker.sock:/var/run/docker.sock
@@ -23,18 +23,19 @@ services:
     networks:
       - app-network
     entrypoint:
-      - /usr/bin/bash
+      - /bin/bash
       - -c
       - |
-        cd pontus-node-jdbc
-        npm install
-        cd ..
+        # cd pontus-node-jdbc
+        # npm install
+        # cd ..
         export CLASSPATH="$(ls /usr/src/app/delta-table/node/jars/*|xargs|sed -e 's/ /,/g' )"
-        cd ../..
-        cd pontus-node-jdbc
-        npm run build
-        ./run-docker.sh 
-        node dist/index.js
+        npm run test src/__tests__/query.test.ts
+        # cd ../..
+        # cd pontus-node-jdbc
+        # npm run build
+        # ./run-docker.sh 
+        # node dist/index.js
         # npm run jest || true
         sleep 1000000
         
@@ -53,7 +54,7 @@ services:
       - app-network
     restart: "no"  # Ensures this runs once and exits
     ports:
-      - "11000:10000"
+      - "10000:10000"
       - "8888:8888"
         
 networks:
