--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,8 +29,8 @@ services:
         # cd pontus-node-jdbc
         # npm install
         # cd ..
-        # export CLASSPATH="$(ls /usr/src/app/delta-table/node/jars/*|xargs|sed -e 's/ /,/g' )"
-        # npm run test src/__tests__/query.test.ts
+        export CLASSPATH="$(ls /usr/src/app/delta-table/node/jars/*|xargs|sed -e 's/ /,/g' )"
+        npm run test src/__tests__/query.test.ts
         # cd ../..
         # cd pontus-node-jdbc
         # npm run build
