--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
           echo 'APP NODE VERSION'
           docker-compose exec app node --version
+          docker-compose exec app npm rebuild
           docker-compose exec app npm install
 
       - name: Run Tests
