--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,8 @@ services:
     volumes:
       - .:/usr/src/app
       - /var/run/docker.sock:/var/run/docker.sock
-    depends_on:
-      - delta-db 
+    # depends_on:
+    #   - delta-db 
     networks:
       - app-network
     entrypoint:
