pvhome-#93: removing node_modules in app before npm install

--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -31,6 +31,9 @@ jobs:
           echo 'APP NODE VERSION'
           docker-compose exec app node --version
           docker-compose exec app npm rebuild
+          rm -rf node_modules
+          npm cache clean --force
+          npm install
           docker-compose exec app npm install 
           docker-compose exec app npm list
 
