--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -31,6 +31,7 @@ jobs:
           echo 'APP NODE VERSION'
           docker-compose exec app node --version
           docker-compose exec app npm rebuild
+          docker-compose exec app chown -R node:node /usr/src/app
           rm -rf node_modules
           npm cache clean --force
           npm install
