--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -31,6 +31,7 @@ jobs:
           echo 'APP NODE VERSION'
           docker-compose exec app node --version
           docker-compose exec app npm rebuild
+          docker-compose exec app npm install
           sudo chmod -R u+w /home/runner/work/pontus-node-jdbc/pontus-node-jdbc/node_modules
           sudo chown -R $(whoami):$(whoami) /home/runner/work/pontus-node-jdbc/pontus-node-jdbc/node_modules
           rm -rf node_modules
