--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -30,9 +30,13 @@ jobs:
         run: |
           echo 'APP NODE VERSION'
           docker-compose exec app node --version
+          echo 'REMOVING NODE MODULES'
           docker-compose exec app rm -rf node_modules
+          echo 'CLEANING NPM CACHE'
           docker-compose exec app npm cache clean --force
+          echo 'NPM INSTALL'
           docker-compose exec app npm install 
+          echo 'NPM LIST'
           docker-compose exec app npm list
 
 
