--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -28,8 +28,11 @@ jobs:
 
       - name: Install npm packages
         run: |
-          echo 'APP NODE VERSION'
+          echo 'REMOVING NODE MODULES'
+          docker-compose exec app rm -rf node_modules
+          echo 'NPM INSTALL'
           docker-compose exec app npm install 
+          echo 'NPM LIST'
           docker-compose exec app npm list
 
 
