pvhome-#93: added script to set CLASSPATH

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
         # cd ../..
         # cd pontus-node-jdbc
         # npm run build
-        # ./run-docker.sh 
+        ./run-docker.sh 
         # node dist/index.js
         # npm run jest || true
         sleep 1000000
