--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Build and Run Services with Docker Compose
         run: |
-          docker-compose up --build app
+          docker-compose up -d --build app
 
       - name: Install npm packages
         run: |
@@ -36,6 +36,7 @@ jobs:
 
       - name: Run Tests
         run: |
+          docker-compose exec app export CLASSPATH="$(ls /usr/src/app/delta-table/node/jars/*|xargs|sed -e 's/ /,/g' )"
           docker-compose exec app npm run test src/__tests__/query.test.ts 
 
       - name: Tear Down
