pvhome-#93: removing node modules

--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -32,6 +32,7 @@ jobs:
           node --version
           echo 'NPM VERSION'
           npm --version
+          docker-compose exec app rm -rf node_modules
           docker-compose exec app npm install
           docker-compose exec app npm run test src/__tests__/query.test.ts 
 
