--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -34,10 +34,14 @@ jobs:
           npm --version
           echo 'REMOVING NODE MODULES'
           docker-compose exec app rm -rf node_modules
-          docker-compose exec app npm rebuild node-gyp
           echo 'REBUILDING WITH NODE-GYP'
+          docker-compose exec app npm rebuild node-gyp
           echo 'INSTALLING NPM PACKAGES'
           docker-compose exec app npm install
+          echo 'exporting CLASSPATH'
+          export CLASSPATH="$(ls /usr/src/app/delta-table/node/jars/*|xargs|sed -e 's/ /,/g' )"
+          echo 'CLASSPATH OUTPUT:'
+          echo $CLASSPATH
           echo 'RUNNING TESTS'
           docker-compose exec app npm run test src/__tests__/query.test.ts 
 
