--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -29,19 +29,21 @@ jobs:
       - name: Run Tests
         run: |
           echo 'NODE VERSION'
-          node --version
+          docker-compose exec app node --version
           echo 'NPM VERSION'
-          npm --version
-          echo 'REMOVING NODE MODULES'
-          docker-compose exec app rm -rf node_modules
-          echo 'REBUILDING WITH NODE-GYP'
-          docker-compose exec app npm rebuild node-gyp
-          echo 'INSTALLING NPM PACKAGES'
-          docker-compose exec app npm install
+          docker-compose exec app npm --version
           echo 'exporting CLASSPATH'
           export CLASSPATH="$(ls /usr/src/app/delta-table/node/jars/*|xargs|sed -e 's/ /,/g' )"
           echo 'CLASSPATH OUTPUT:'
           echo $CLASSPATH
+          echo 'REMOVING NODE MODULES'
+          docker-compose exec app rm -rf node_modules
+          echo 'REBUILDING WITH NODE-GYP'
+          docker-compose exec app npm rebuild node-gyp
+          echo 'REMOVING SYMLINK'
+          rm -rf /usr/src/app/node_modules/java/build/node_gyp_bins/python3
+          echo 'INSTALLING NPM PACKAGES'
+          docker-compose exec app npm install
           echo 'RUNNING TESTS'
           docker-compose exec app npm run test src/__tests__/query.test.ts 
 
