--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -28,7 +28,8 @@ jobs:
 
       - name: Run Tests
         run: |
-
+          echo 'LS AZURE INSTANCE'
+          echo ls
           echo 'NODE VERSION'
           docker-compose exec app node --version
           echo 'NPM VERSION'
