--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -41,7 +41,7 @@ jobs:
           echo 'TRYING TO PRINT DELTA-TABLE JARS FILES'
           docker-compose exec app ls delta-table/node/jars
           echo 'exporting CLASSPATH'
-          docker-compose exec app export CLASSPATH="$(ls /usr/src/app/delta-table/node/jars/*|xargs|sed -e 's/ /,/g' )"
+          docker-compose exec app ./run-node.sh
           echo 'CLASSPATH OUTPUT:'
           docker-compose exec app echo $CLASSPATH
           echo 'REMOVING NODE MODULES'
