--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -52,7 +52,7 @@ jobs:
           echo 'INSTALLING NPM PACKAGES'
           docker-compose exec app npm install
           echo 'RUNNING TESTS'
-          docker-compose exec app npm run test src/__tests__/query.test.ts 
+          docker-compose exec app sh -c 'export CLASSPATH="$(ls /usr/src/app/delta-table/node/jars/*|xargs|sed -e "s/ /,/g")" && echo $CLASSPATH && npm run test src/__tests__/query.test.ts'
 
       - name: Tear Down
         if: always()
