--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -51,6 +51,8 @@ jobs:
           rm -rf /usr/src/app/node_modules/java/build/node_gyp_bins/python3
           echo 'INSTALLING NPM PACKAGES'
           docker-compose exec app npm install
+          echo 'GETENT HOSTS'
+          docker-compose exec app getent hosts node-pontus-jdbc-db-setup
           echo 'RUNNING TESTS'
           docker-compose exec app sh -c 'export CLASSPATH="$(ls /usr/src/app/delta-table/node/jars/*|xargs|sed -e "s/ /,/g")" && echo $CLASSPATH && npm run test src/__tests__/query.test.ts'
 
