--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,9 @@ services:
       USER_PASSWORD: user
       LD_LIBRARY_PATH: /usr/lib/jvm/java-1.17.0-openjdk-amd64/lib/server:/usr/lib/jvm/java-1.17.0-openjdk-amd64/lib
       P_DELTA_TABLE_HIVE_SERVER: jdbc:hive2://node-pontus-jdbc-db-setup:10000 
-    # volumes:
-    #   - .:/usr/src/app
-    #   - /var/run/docker.sock:/var/run/docker.sock
+    volumes:
+      - .:/usr/src/app
+      - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
       - delta-db 
     networks:
@@ -29,7 +29,9 @@ services:
         # cd pontus-node-jdbc
         npm install
         # cd ..
+        echo 'Exporting in shell'
         export CLASSPATH="$(ls /usr/src/app/delta-table/node/jars/*|xargs|sed -e 's/ /,/g' )"
+        ls /usr/src/app/delta-table/node/jars/ 
         npm run test src/__tests__/query.test.ts
         # cd ../..
         # cd pontus-node-jdbc
