--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -24,8 +24,7 @@ jobs:
 
       - name: Build and Run Services with Docker Compose
         run: |
-          docker-compose up -d --build
-
+          docker-compose -f docker-compose.yml up --build --abort-on-container-exit --exit-code-from app
 
       - name: Tear Down
         if: always()
