--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -25,6 +25,13 @@ jobs:
       - name: Build and Run Services with Docker Compose
         run: |
           docker-compose -f docker-compose.yml up --build --abort-on-container-exit --exit-code-from app
+          echo 'LIST'
+          docker-compose exec app ls
+          echo 'PWD'
+          docker-compose exec app pwd
+          echo 'CLASSPATH'
+          docker-compose exec app echo $CLASSPATH
+          
 
       - name: Tear Down
         if: always()
