--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -24,13 +24,13 @@ jobs:
 
       - name: Build and Run Services with Docker Compose
         run: |
-          docker-compose up --build app
-          echo 'LIST'
-          docker-compose exec app ls
-          echo 'PWD'
-          docker-compose exec app pwd
-          echo 'CLASSPATH'
-          docker-compose exec app echo $CLASSPATH
+          # docker-compose up --build app
+          # echo 'LIST'
+          # docker-compose exec app ls
+          # echo 'PWD'
+          # docker-compose exec app pwd
+          # echo 'CLASSPATH'
+          # docker-compose exec app echo $CLASSPATH
           docker-compose -f docker-compose.yml up --build --abort-on-container-exit --exit-code-from app
           
       - name: Tear Down
