pvhome-#25-b: sleep commented out

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
         # ./run-docker.sh 
         # node dist/index.js
         # npm run jest || true
-        sleep 1000000
+        # sleep 1000000
         
 
   delta-db:
